--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,31 @@
  *= require_tree .
  *= require_self
  */
+body {
+    font-family: Helvetica, Geneva, Arial, sans-serif;
+    font-size: small;
+    font-color: #000;
+    background-color: #fff;
+}
+
+div#container {
+    width: 760px;
+    margin: 0 auto;
+}
+
+div#header {
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+div#header h1 {
+    padding-top: 15px;
+}
+
+div#header h3 {
+    padding-top: 15px;
+}
+
+div#new-image h5 {
+    padding: 15px 0px;
+}
