--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,19 +1,22 @@
-<%= form_for(@image) do |f| %>
-  <% if @image.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@pimage.errors.count, "error") %> prohibited this image from being saved:</h2>
+<%= simple_form_for @image do |f| %>
 
-        <ul>
-          <% @image.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-          <% end %>
-        </ul>
-      </div>
-  <% end %>
-
+  <div id="new_img_header">
+    <h5>Enter URL of image to save</h5>
+  </div>
   <div class="field form-group">
-    <%= f.label :url %>
     <%= f.text_field :url, class: 'form-control' %>
     <%= f.submit "Save" %>
   </div>
+
+   <% if @image.errors.any? %>
+     <div id="error_explanation">
+       <h4><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</h4>
+
+       <ul>
+         <% @image.errors.full_messages.each do |msg| %>
+            <div><%= msg %></div>
+         <% end %>
+       </ul>
+     </div>
+    <% end %>
 <% end %>
