AW-Added tests for issue 2 Touched up on formatting of page

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,15 @@
-<%= link_to "Back", new_image_path %>
+<div id="container">
+  <div id="header">
+    <h1>Your image: </h1>
+  </div>
 
-<p><%= @image.url %></p>
-<%=image_tag(@image.url) %>
+  <div id="content">
+    <%= link_to "Back", new_image_path %>
+  </div>
+
+  <!--<p><%= @image.url %></p>-->
+  <div id="image">
+    <%=image_tag(@image.url) %>
+  </div>
+
+</div>
