--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,14 +20,25 @@ body {
     background-color: #fff;
 }
 
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited,
+.btn-primary:focus {
+    background-color: #818182;
+    border-color: #818182;
+}
+
 div#container {
     width: 760px;
     margin: 0 auto;
+    padding-top: 10px;
 }
 
 div#header {
     text-align: center;
     padding-bottom: 15px;
+    background-color: #9ce3f7
 }
 
 div#header h1 {
@@ -44,5 +55,10 @@ div#new_img_header {
 
 div#error_explanation {
     color: #f00;
+    padding-top: 10px;
+}
+
+div#image {
+    position: center;
     padding-top: 10px;
 }
