--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,12 +1,11 @@
 
-<body id="home">
-<div id="container">
-  <div id="header">
+<body class="home">
+<div class="container">
+  <div class="header">
     <h1>Welcome to Image Sharer!</h1>
   </div>
 
-  <div id="content">
-    <!--<a class="btn btn-default" href="application_img_link_submission_path" role="button">Link</a>-->
+  <div class="content">
     <%= link_to 'Save an Image', new_image_path, class: "btn btn-primary" %>
   </div>
 </div>
