--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,18 +1,14 @@
 
-<div id="container">
-  <div id="header">
+<div class="container">
+  <div class="header">
     <h1>Submit an image </h1>
   </div>
 
-  <div id="content">
+  <div class="content">
     <%= link_to 'Home', root_path %>
   </div>
 
-  <div id="new-image">
+  <div class="new-image">
     <%= render 'form' %>
   </div>
-
 </div>
-
-
-
