--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,14 +1,13 @@
-<div id="container">
-  <div id="header">
+<div class="container">
+  <div class="header">
     <h1>Your image: </h1>
   </div>
 
-  <div id="content">
+  <div class="content">
     <%= link_to "Back", new_image_path %>
   </div>
 
-  <!--<p><%= @image.url %></p>-->
-  <div id="image">
+  <div class="image">
     <%=image_tag(@image.url) %>
   </div>
 
