--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,14 +1,15 @@
 
 <body class="home">
-<div class="container">
-  <div class="header">
-    <h1>Welcome to Image Sharer!</h1>
-  </div>
+  <div class="container">
+    <div class="header">
+      <h1>Welcome to Image Sharer!</h1>
+    </div>
 
-  <div class="content">
-    <%= link_to 'Save an Image', new_image_path, class: "btn btn-primary" %>
+    <div class="content">
+      <%= link_to 'Save an Image', new_image_path, class: "btn btn-primary" %>
+      <%= link_to 'All Images', images_path, class: "btn btn-primary" %>
+    </div>
   </div>
-</div>
 
 </body>
 
