--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Images#index</h1>
-<p>Find me in app/views/images/index.html.erb</p>
+<div class="container">
+  <div class="header">
+    <h1>All Images </h1>
+  </div>
+
+  <div class="content">
+    <%= link_to 'Home', root_path %>
+  </div>
+
+
+  <div class="content">
+    <% @images.each do |img| %>
+        <div class="image">
+          <%=image_tag(img.url) %>
+        </div>
+    <% end %>
+  </div>
+</div>
