AW-css style fixes, show all images on homepage

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,7 +1,7 @@
 
 <body class="home">
-  <div class="container">
-    <div class="header">
+  <div class="l-container">
+    <div class="l-header header">
       <h1>Welcome to Image Sharer!</h1>
     </div>
 
