--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @image do |f| %>
 
-  <div class="new_img_header">
+  <div class="l-new-img-header">
     <h5>Enter URL of image to save</h5>
   </div>
   <div class="field form-group">
@@ -9,7 +9,7 @@
   </div>
 
    <% if @image.errors.any? %>
-     <div class="error_explanation">
+     <div class="error-explanation">
        <h4><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</h4>
 
        <ul>
