--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,18 +1,19 @@
-<div class="container">
-  <div class="header">
-    <h1>All Images </h1>
+<body class="home">
+<div class="l-container">
+  <div class="l-header header">
+    <h1>Welcome to Image Sharer!</h1>
   </div>
 
   <div class="content">
-    <%= link_to 'Home', root_path %>
+    <%= link_to 'Save an Image', new_image_path, class: "btn btn-primary" %>
   </div>
 
-
-  <div class="content">
+  <div class="content img-list">
     <% @images.each do |img| %>
-        <div class="image">
-          <%=image_tag(img.url) %>
-        </div>
+        <%=image_tag(img.url, class: "image") %>
     <% end %>
   </div>
 </div>
+</body>
+
+
