--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,6 +1,6 @@
 
-<div class="l-container">
-  <div class="l-header header">
+<div class="container">
+  <div class="header">
     <h1>Submit an image </h1>
   </div>
 
