--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,5 +1,5 @@
-<div class="l-container">
-  <div class="l-header header">
+<div class="container">
+  <div class="header">
     <h1>Your image: </h1>
   </div>
 
@@ -7,5 +7,8 @@
     <%= link_to "Back", new_image_path %>
   </div>
 
-  <%=image_tag(@image.url, class: "image") %>
+  <div class="image">
+    <%=image_tag(@image.url) %>
+  </div>
+
 </div>
