AW-issue#4 Displays 20 random images on homepage every time rake db:setup is ran

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -8,11 +8,11 @@
     <%= link_to 'Save an Image', new_image_path, class: "btn btn-primary" %>
   </div>
 
-  <div class="content img-list">
+  <ul class="content img-list">
     <% @images.each do |img| %>
-        <%=image_tag(img.url, class: "image") %>
+        <li><%=image_tag(img.url, class: "image") %></li>
     <% end %>
-  </div>
+  </ul>
 </div>
 </body>
 
