--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -4,9 +4,9 @@
     <h1>Submit an image </h1>
   </div>
 
-  <div class="content">
-    <%= link_to 'Home', root_path %>
-  </div>
+  <nav class="nav">
+    <%= link_to 'Home', root_path, class:"nav-link active"%>
+  </nav>
 
   <div class="new-image">
     <%= render 'form' %>
