--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -3,9 +3,10 @@
     <h1>Your image: </h1>
   </div>
 
-  <div class="content">
-    <%= link_to "Back", new_image_path %>
-  </div>
+  <nav class="nav">
+    <%= link_to 'Back', new_image_path, class:"nav-link active"%>
+    <%= link_to 'Home', root_path, class:"nav-link active"%>
+  </nav>
 
   <%=image_tag(@image.url, class: "image") %>
 </div>
