--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -4,8 +4,10 @@
       <h1>Welcome to Image Sharer!</h1>
     </div>
 
-    <nav class="nav nav-pills">
-      <%= link_to 'Save an Image', new_image_path, class: "nav-link active" %>
+    <nav class="nav nav-pills nav-justified">
+      <li class="nav-item">
+        <%= link_to 'Save an Image', new_image_path, class: "nav-link active" %>
+      </li>
     </nav>
 
     <ul class="content img-list">
