--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -10,6 +10,9 @@
     <li class="nav-item">
       <%= link_to 'Home', root_path, class:"nav-link active"%>
     </li>
+    <li class="nav-item">
+      <%= link_to 'About', "#", class:"nav-link"%>
+    </li>
   </ul>
 
   <%=image_tag(@image.url, class: "image") %>
