--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -8,6 +8,9 @@
       <li class="nav-item">
         <%= link_to 'Save an Image', new_image_path, class: "nav-link active" %>
       </li>
+      <li class="nav-item">
+        <%= link_to 'About', "#", class:"nav-link"%>
+      </li>
     </nav>
 
     <ul class="content img-list">
