--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -8,6 +8,9 @@
     <li class="nav-item">
       <%= link_to 'Home', root_path, class:"nav-link active"%>
     </li>
+    <li class="nav-item">
+      <%= link_to 'About', "#", class:"nav-link"%>
+    </li>
   </ul>
 
   <div class="new-image">
