--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -15,5 +15,7 @@
     </li>
   </ul>
 
-  <%=image_tag(@image.url, class: "image") %>
+  <div class="image img-saved">
+    <%=image_tag(@image.url, class:'l-image') %>
+  </div>
 </div>
