--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -18,11 +18,11 @@
         <div class="card-deck">
           <% duo.each do |img| %>
               <div class="card">
-                <div class="image">
-                  <%=image_tag(img.url, class: "l-image") %>
-                </div>
-                <div class="card-body">
-                  <%= link_to 'Go To Image', img.url, class: "btn btn-card" %>
+                <div class="card-body d-flex flex-column">
+                  <div class="image">
+                    <%=image_tag(img.url, class: "l-image") %>
+                  </div>
+                  <%= link_to 'Go To Image', img.url, class: "btn btn-sml btn-card mt-auto" %>
                 </div>
               </div>
           <% end %>
