--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,6 +1,6 @@
 
 <body class="home">
-  <div class="l-container">
+  <div class="container">
     <div class="l-header header">
       <h1>Welcome to Image Sharer!</h1>
     </div>
