--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,4 +27,10 @@
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
+
+  <div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container footer-container">
+      <p class="navbar-text">© 2019 - Site Built By Angela Wang. </p>
+    </div>
+  </div>
 </html>
