AW-fixed footer and bootstrap "container"

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,4 @@
-<body class="home">
+<body class="wrapper">
   <div class="container">
     <div class="l-header header">
       <h1>Welcome to Image Sharer!</h1>
@@ -31,5 +31,11 @@
     </ul>
   </div>
 </body>
+
+<div class="navbar navbar-default navbar-fixed-bottom footer">
+  <div class="container">
+    <p class="navbar-text">© 2019 - Site Built By Angela Wang. </p>
+  </div>
+</div>
 
 
