--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,16 +55,17 @@ body {
 .container {
     width: 1000px;
     margin: 0 auto;
-    padding-top: 10px;
+    height: 100%;
 }
 
 .l-header {
     padding: 15px 0px;
 }
 
-.header, .footer-container {
+.header, .footer {
     text-align: center;
     background-color: #9ce3f7;
+    width: 100%;
 }
 
 .error-explanation {
@@ -88,3 +89,15 @@ body {
     margin-bottom: 10px;
 }
 
+.footer {
+    position: absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:80px;
+}
+
+.container {
+    min-height: 100%;
+    position:relative;
+}
