--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,19 +1,26 @@
+<body class="wrapper">
+  <div class="container">
+    <div class="l-header header">
+      <h1>Submit an image </h1>
+    </div>
 
-<div class="container">
-  <div class="l-header header">
-    <h1>Submit an image </h1>
+    <ul class="nav nav-pills nav-justified">
+      <li class="nav-item">
+        <%= link_to 'Home', root_path, class:"nav-link active"%>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'About', "#", class:"nav-link"%>
+      </li>
+    </ul>
+
+    <div class="new-image">
+      <%= render 'form' %>
+    </div>
   </div>
+</body>
 
-  <ul class="nav nav-pills nav-justified">
-    <li class="nav-item">
-      <%= link_to 'Home', root_path, class:"nav-link active"%>
-    </li>
-    <li class="nav-item">
-      <%= link_to 'About', "#", class:"nav-link"%>
-    </li>
-  </ul>
-
-  <div class="new-image">
-    <%= render 'form' %>
+<div class="navbar navbar-default navbar-fixed-bottom footer">
+  <div class="container">
+    <p class="navbar-text">© 2019 - Site Built By Angela Wang. </p>
   </div>
 </div>
