--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -16,8 +16,8 @@
       </li>
     </ul>
 
-    <div class="image img-saved">
-      <%=image_tag(@image.url, class:'l-image') %>
+    <div class="image-container img-saved">
+      <%=image_tag(@image.url, class:'image') %>
     </div>
   </div>
 </body>
