--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -19,10 +19,10 @@
           <% duo.each do |img| %>
               <div class="card">
                 <div class="card-body d-flex flex-column">
-                  <div class="image">
-                    <%=image_tag(img.url, class: "l-image") %>
+                  <div class="image-container">
+                    <%=image_tag(img.url, class: "image") %>
                   </div>
-                  <%= link_to 'Go To Image', img.url, class: "btn btn-sml btn-card mt-auto" %>
+                  <%= link_to 'Go To Image', img.url, class: "btn btn-sml card__btn mt-auto" %>
                 </div>
               </div>
           <% end %>
