--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -4,14 +4,7 @@
       <h1>Submit an image </h1>
     </div>
 
-    <ul class="nav nav-pills nav-justified">
-      <li class="nav-item">
-        <%= link_to 'Home', root_path, class:"nav-link active"%>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'About', "#", class:"nav-link"%>
-      </li>
-    </ul>
+    <%= render 'mainnav' %>
 
     <div class="new-image">
       <%= render 'form' %>
