--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -9,6 +9,8 @@
     <div class="image-container img-saved">
       <%=image_tag(@image.url, class:'image') %>
     </div>
+
+    <p class="img-tags">Tags: <%= @image.tag_list %></p>
   </div>
 </body>
 
