--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -22,7 +22,9 @@
                   </div>
 
                   <div class="card-img-tags">
-                    <p>Tags: <%= img.tag_list %></p>
+                    <p>Tags: <% img.tag_list.each do |tag| %>
+                          <%= link_to tag, images_path(tag: tag) %>
+                      <% end %></p>
                   </div>
                   <%= link_to 'Go To Image', img.url, class: "btn btn-sml card__btn mt-auto" %>
                 </div>
