AW-issue #8 Added delete image option User is prompted for confirmation prior to deletion Deleted images are removed from the homepage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,12 +32,12 @@ body {
 .container .nav-pills .nav-link.active,
 .search-tag-btn {
     background-color: #818182;
-    border-color: #818182;
     color: white;
 }
 
-.card__btn {
-    width: 200px;
+.btn-group .card__btn {
+    width: 150px;
+    border: 1.5px solid black;
 }
 
 .card__btn:hover,
