--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@ body {
     width: 100%;
 }
 
-.error-explanation {
+.help-block {
     color: #f00;
     padding-top: 10px;
 }
@@ -106,7 +106,7 @@ body {
     position:relative;
 }
 
-.img-tags {
+.img-tags, .img-tags-header {
     text-align: center;
 }
 
