--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -10,7 +10,18 @@
       <%=image_tag(@image.url, class:'image') %>
     </div>
 
-    <p class="img-tags">Tags: <%= @image.tag_list %></p>
+    <div class="img-tags-header">Tags:</div>
+    <div class="img-tags">
+      <p><% @image.tag_list.each do |tag| %>
+            <span class="card__tag">
+              <%= link_to tag, images_path(tag: tag),  class:"card__tag-link"%>
+            </span>
+        <% end %></p>
+    </div>
+    <div class="btn-group" role="group">
+      <%= link_to 'Delete', image_path(@image), method: :delete,
+                  data: { confirm: 'Are you sure?' }, class: "btn btn-sml card__btn" %>
+    </div>
   </div>
 </body>
 
